changed to proper layer definition

--- a/policies/simple-token-app.yml
+++ b/policies/simple-token-app.yml
@@ -8,7 +8,7 @@
 - !grant
   role: !group token-users
   members:
-    - !layer simple-token-app
+    - !layer
     - !layer /jenkins-frontend
 
 - !permit
